text-align fix

--- a/src/ui/MonitorRowContainer.scss
+++ b/src/ui/MonitorRowContainer.scss
@@ -304,7 +304,7 @@ $preview-grid-divider: 2px;
         font-size: 3.2vh;
 
         &.time {
-          text-align: flex-end;
+          text-align: end;
         }
       }
     }
@@ -456,7 +456,7 @@ $preview-grid-divider: 2px;
         }
 
         &.time {
-          text-align: flex-end;
+          text-align: end;
           font-family: $monitor-font;
         }
       }
