--- a/src/ui/StopRoutesModal.scss
+++ b/src/ui/StopRoutesModal.scss
@@ -228,7 +228,7 @@
 
       .no-renaming {
         width: 50%;
-        text-align: flex-end;
+        text-align: end;
 
         h2 {
           color: $primary-color;
